unpackaged/main/default/objects/Contact/fields/Attended_Dreamforce__c.field-meta.xml
<CustomField>
    <fullName>Attended_Dreamforce__c</fullName>
    <formula>IMAGE( "/servlet/servlet.FileDownload?file=" &amp;
CASE( Dreamforce__c, 
"yes", "Image ID", 
"No", "Image ID"
, ""),"Image Not Available...",18,18)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attended Dreamforce</label>
    <type>Text</type>
</CustomField>