unpackaged/main/default/objects/Contact/fields/Hospital_Number__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Number__c</fullName>
    <label>Hospital Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>