unpackaged/main/default/objects/Contact/fields/Need_to_Know_Information__c.field-meta.xml
<CustomField>
    <fullName>Need_to_Know_Information__c</fullName>
    <inlineHelpText>Use this field to capture information that is useful to others when interacting with this Contact</inlineHelpText>
    <label>Need-to-Know Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>