unpackaged/main/default/objects/Contact/fields/Other_Diagnosed_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Other_Diagnosed_Conditions__c</fullName>
    <label>Other Diagnosed Conditions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Need Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>