unpackaged/main/default/objects/Contact/fields/Patient_Consent_Received__c.field-meta.xml
<CustomField>
    <fullName>Patient_Consent_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Patient Consent Received</label>
    <type>Checkbox</type>
</CustomField>