unpackaged/main/default/objects/Contact/fields/Patient_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Patient_Diagnosis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If Price Books get used for any other purpose in the future, a flag will be needed to separate the original ones representative of Patient Diagnoses so that this lookup can be filtered/validated.</description>
    <label>Patient Diagnosis</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Patients Diagnosed</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>