unpackaged/main/default/objects/Contact/fields/Patient_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Patient_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Patient Exempt</label>
    <type>Checkbox</type>
</CustomField>