unpackaged/main/default/objects/Contact/fields/Patient_s_GP__c.field-meta.xml
<CustomField>
    <fullName>Patient_s_GP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient's GP</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Patient's GP)</relationshipLabel>
    <relationshipName>GPPatients</relationshipName>
    <type>Lookup</type>
</CustomField>