unpackaged/main/default/objects/Contact/fields/Preferred_Communication_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Communication_Method__c</fullName>
    <label>Preferred Communication Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>