unpackaged/main/default/objects/Contact/fields/Prescription_Renewals__c.field-meta.xml
<CustomField>
    <fullName>Prescription_Renewals__c</fullName>
    <label>Prescription Renewals</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patient</fullName>
            </value>
            <value>
                <fullName>Brunswick</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>