unpackaged/main/default/objects/Contact/fields/Primary_HCP__c.field-meta.xml
<CustomField>
    <fullName>Primary_HCP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who is the primary healthcare professional or dietician for this patient. This dictates access for the portal, so ensure the right Contact is selected.</inlineHelpText>
    <label>Primary HCP</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Patients</relationshipLabel>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>