unpackaged/main/default/objects/Contact/fields/Relationship_to_Vitaflo__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Vitaflo__c</fullName>
    <label>Relationship to Vitaflo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patient</fullName>
            </value>
            <value>
                <fullName>Healthcare Professional</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>