unpackaged/main/default/objects/Contact/fields/Specific_Diagnosis_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Specific_Diagnosis_Instructions__c</fullName>
    <label>Specific Diagnosis Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>