unpackaged/main/default/objects/Contact/fields/XPatient_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>XPatient_Diagnosis__c</fullName>
    <label>XPatient Diagnosis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diabetes</fullName>
            </value>
            <value>
                <fullName>PKD</fullName>
            </value>
            <value>
                <fullName>Ketoacidosis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>