unpackaged/main/default/objects/Contact/recordTypes/Healthcare_Professional.recordType-meta.xml
<RecordType>
    <fullName>Healthcare_Professional</fullName>
    <active>true</active>
    <label>Healthcare Professional</label>
</RecordType>