unpackaged/main/default/objects/Contact/listViews/My_Patients.listView-meta.xml
<ListView>
    <fullName>My_Patients</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Primary_HCP__c</field>
        <operation>equals</operation>
    </filters>
    <label>My Patients</label>
    <sharedTo>
        <allCustomerPortalUsers></allCustomerPortalUsers>
    </sharedTo>
</ListView>